Add user management pages.
